[package]
name = "mqtt-broker"
version = "0.1.0"
authors = ["Brian Schwind <brianmschwind@gmail.com>"]
edition = "2018"

[dependencies]
bytes = "0.5.0"
tokio = { version = "0.2", features = ["tcp", "dns", "rt-threaded", "sync", "time"] }
tokio-util = { version = "0.2", features = ["codec"] }
futures = "0.3"
num_enum = "0.4"
