[package]
name = "mqtt-v5-broker"
description = "A tokio-based MQTT v5 broker written in Rust."
license = "MIT"
readme = "README.md"
repository = "https://github.com/bschwind/mqtt-broker"
version = "0.1.0"
authors = ["Brian Schwind <brianmschwind@gmail.com>"]
edition = "2018"

[dependencies]
bytes = "0.5.0"
tokio = { version = "0.2", features = ["tcp", "dns", "rt-threaded", "sync", "time", "macros"] }
tokio-util = { version = "0.3", features = ["codec"] }
mqtt-v5 = { path = "../mqtt-v5", version = "0.1.0" }
nanoid = "0.3"
futures = "0.3"
