[package]
name = "mqtt-v5-broker"
description = "A tokio-based MQTT v5 broker written in Rust."
license = "MIT"
readme = "README.md"
repository = "https://github.com/bschwind/mqtt-broker"
version = "0.1.0"
authors = ["Brian Schwind <brianmschwind@gmail.com>"]
edition = "2018"

[dependencies]
bytes = "1"
futures = "0.3"
log = "0.4"
mqtt-v5 = { path = "../mqtt-v5", version = "0.2" }
nanoid = "0.3"
tokio = { version = "1", features = ["net", "rt-multi-thread", "sync", "time", "macros"] }
tokio-util = { version = "0.6", features = ["codec"] }
