[package]
name = "mqtt-v5"
description = "Rust types, encode/decode functions, and a tokio codec for MQTT V5"
license = "MIT"
readme = "README.md"
repository = "https://github.com/bschwind/mqtt-broker"
version = "0.1.0"
authors = ["Brian Schwind <brianmschwind@gmail.com>"]
edition = "2018"

[features]
default = ["codec", "websocket"]
codec = ["tokio-util"]
websocket = ["codec", "websocket-codec", "sha1", "base64"]

[dependencies]
bytes = "0.5.0"
num_enum = "0.4"

tokio-util = { optional = true, version = "0.2", features = ["codec"] }
# TODO(bschwind) - Replace when this issue is resolved:
#                  https://github.com/1tgr/rust-websocket-lite/issues/19
websocket-codec = { optional = true, version = "0.2.2", git = "https://github.com/bschwind/rust-websocket-lite" }
sha1 = { optional = true, version = "0.6.0" }
base64 = { optional = true, version = "0.11.0" }
